feature: create board feature

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,22 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: none;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: hsl(var(--border));
+    border-radius: 100vh;
+    background-clip: content-box;
+    border: 1.5px solid transparent;
+  }
+}
